--- a/_includes/authors.html
+++ b/_includes/authors.html
@@ -11,7 +11,10 @@
 {% else %}
     {% if include.post.author_names %}
         {% for author_name in include.post.author_names %}
-            {% include author.html name=author_name is_last=forloop.last %}
+            {% assign index = forloop.index0 %}
+            {% assign avatar = include.post.author_avatars[index] %}
+            {% assign url = include.post.author_urls[index] %}
+            {% include author.html name=author_name avatar=avatar url=url is_last=forloop.last %}
         {% endfor %}
     {% endif %}
 {% endif %}
